[package]
name = "fetch_price_of_cryptos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11.7", features = ["json"] }
serde_json = "1.0"
bytes = "1"
chrono = "0.4"